<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="com.datecs.demo.MenuFrg_binder" />

    <ScrollView
        android:id="@+id/scrBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:configChanges="orientation|screenSize"
        android:fadeScrollbars="false" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_SDK_build"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_set_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/data_time_set" />

                <Button
                    android:id="@+id/btn_headerFooter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/header_footer" />

                <Button
                    android:id="@+id/btnCashInOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/cash_in_out" />

                <Button
                    android:id="@+id/btn_vats_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="VAT config" />

                <Button
                    android:id="@+id/btn_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Items" />
                <Button
                    android:id="@+id/btn_list_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Items List" />
                <Button
                    android:id="@+id/btn_infoEJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Journal Search  " />

                <Button
                    android:id="@+id/btn_printConfig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Print config" />

                <Button
                    android:id="@+id/btn_deviceStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Device Status" />

                <Button
                    android:id="@+id/btn_CustomCommand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Command" />

                <Button
                    android:id="@+id/btn_setNetwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="Setup LAN" />

                <Button
                    android:id="@+id/btn_deviceInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Device Info" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_xReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/x_report" />

                <Button
                    android:id="@+id/btn_zReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/z_report" />


                <Button
                    android:id="@+id/btn_ExSaleTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/test_ex_sale" />

                <Button
                    android:id="@+id/btn_Invoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/invoice" />
                <Button
                    android:id="@+id/btn_cancelAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/cancel_all" />

                <Button
                    android:id="@+id/btn_Storno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/storno" />
                <Button
                    android:id="@+id/btn_nonFiscalReceipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/non_fiscal_receipt" />

                <Button
                    android:id="@+id/btn_Departments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Departments" />

                <Button
                    android:id="@+id/btn_ClientsInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Clients Info" />
                <Button
                    android:id="@+id/btn_FiscRecordInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Fiscal Record Info" />
            </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>